--- a/K8S-Manifests/pod.yaml
+++ b/K8S-Manifests/pod.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod 
 metadata:
   name: organic-pod 
+  namespace: test-ns 
 spec:
   containers:
     - name: organic-container 
